# NLP_Microservice

./: .gitignore  ADDING_ENDPOINTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  framenet.txt  pyproject.toml  run_server.py  setup.sh  test_framenet.py
docs/: synset.txt  wordnet_api.md
example_files/: demo.py  diagnose_server.py  test_integration.py  test_wordnet_functionality.py  wordnet_demo.py
llm_files/: WORDNET_COMPLETION_SUMMARY.md  WORDNET_FINAL_SUMMARY.md
proto/: nlp.proto
src/nlpmicroservice/: __init__.py  client.py  config.py  nlp_service.py  server.py
tests/: conftest.py  test_framenet_integration.py  test_nlp_service.py  test_summarization.py  test_wordnet.py
